# typst

./: Cargo.toml  test.typ
crates/typst-cli/src/: query.rs
crates/typst-eval/src/: access.rs  call.rs  code.rs  markup.rs  methods.rs
crates/typst-ide/src/: complete.rs  tooltip.rs
crates/typst-library/src/: engine.rs  routines.rs
crates/typst-library/src/foundations/: args.rs  array.rs  content.rs  dict.rs  func.rs  module.rs  scope.rs  styles.rs
crates/typst-library/src/layout/: container.rs  pad.rs  page.rs  transform.rs
crates/typst-macros/src/: elem.rs  func.rs
crates/typst-pdf/: Cargo.toml
crates/typst-pdf/src/: color.rs  gradient.rs  image.rs  lib.rs  page.rs
crates/typst-syntax/src/: ast.rs  highlight.rs  kind.rs  parser.rs  set.rs
crates/typst-utils/src/: deferred.rs  hash.rs  lib.rs  pico.rs
crates/typst-vm/: Cargo.toml
crates/typst-vm/src/: closure.rs  lib.rs
crates/typst-vm/src/compiler/: call.rs  code.rs  flow.rs  func.rs  import.rs  include.rs  locals.rs  markup.rs  math.rs  mod.rs  pattern.rs  rules.rs
crates/typst-vm/src/vm/: access.rs  binary.rs  call.rs  closure.rs  destruct.rs  flow.rs  instructions.rs  joiner.rs  markup.rs  math.rs  mod.rs  ops.rs  rules.rs  state.rs  unary.rs
crates/typst/src/: diag.rs  lib.rs
docs/src/: html.rs
tests/: Cargo.toml
tests/fuzz/src/: compile.rs
tests/suite/foundations/: array.typ  content.typ
tests/suite/scripting/: call.typ  closure.typ  destructuring.typ  for.typ  if.typ  import.typ
tests/suite/syntax/: backtracking.typ
tests/typ/visualize/: gradient-transparency.typ
(+66 files in other folders)
